# reddit_app

./: .gitignore  README.md  app.py  design.drawio  pyproject.toml  register_vars.sh
docs/: json_docs.md
reddit/: client.py  config.py  store.py  subreddit.py  types.py  user.py
tests/: client_test.py  config_test.py  store_test.py  user_test.py
