[tool.poetry]
name = "reddit"
version = "0.1.0"
description = ""
authors = ["Micah Norman <minoad@gmail.com>"]
readme = "README.md"
packages = [{include = "reddit"}]

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.0"
black = "^23.3.0"
pytest = "^7.3.2"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 180
disable = """
    W0201,
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "tests/integration",
]
python_files = ["test_*.py", "*_test.py", "test.py", "tests.py"]
python_functions = ["*_test", "test_*"]